syntax = "proto3";

package pixalquarks.terminalChatServer;

option go_package = "./chatserver";

message FromClient {
  string name = 1;
  string body = 2;
}

message FromServer {
  string name = 1;
  string body = 2;
}

service Services {
  rpc ChatService(stream FromClient) returns (stream FromServer) {};
}